src/assets/css/style.css
* {
    user-select: text !important;
    -moz-user-select: text !important;
    -webkit-user-select: text !important;
}

#notice-developer-tools-opened {
    display: none !important;
}

::selection {
    background-color: #1D4ED8;
    background-color: #2563EB;
    background-color: #3B82F6;
    background-color: #FF4500;
    background-color: #05C30C;
    background-color: #7A6BFF;
    color: #F5F5F5;
}

@keyframes animate {
    50% {
        background-color: #05C30C;
        box-shadow: 0 0 6px 2px #05C30C;
    }
}

.app-version {
    user-select: none !important;
}

.app-version.on i {
    animation: animate 0.8s ease-in-out infinite;
}

.p-toast {
    bottom: unset !important;
    left: unset !important;
    right: 16px;
    top: 72px;
    display: flex;
    flex-direction: column;
}

[role="alert"] {
    margin: 0 !important;
}

.cursor .vite-record {
    color: inherit !important;
    cursor: grab !important;
    cursor: -webkit-grab !important;

    * {
        color: inherit !important;
        cursor: grab !important;
        cursor: -webkit-grab !important;
    }

    ::before,
    ::after {
        cursor: grab !important;
        cursor: -webkit-grab !important;
    }
}


.vite-record {
    color: #343dff !important;

    * {
        color: #343dff !important;
    }
}

